# imageencoder.cximage

./: CMakeLists.txt
imageencoder.cximage/: addon.xml.in
lib/cximage-6.0/: CMakeLists.txt
lib/cximage-6.0/CxImage/: ximacfg.h
src/: DllInterface.cpp  DllInterface.h  cximage.cpp  cximage.h
